--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "ts-loader": "^8.0.4"
   }
