--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@react-google-maps/api": "^1.13.0",
     "bootstrap": "^4.5.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
